Rework pom.xml, update versions of everything